// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/post_view/CombinedSystemMessage should match snapshot 1`] = `
<div>
  <p
    class="markdown__paragraph-inline"
  >
    <span
      data-mention="AddedUser1"
    >
      @AddedUser1
    </span>
     
    <strong>
      added to the channel
    </strong>
     by 
    <span
      data-mention="User1."
    >
      @User1.
    </span>
  </p>
  <br />
  <p
    class="markdown__paragraph-inline"
  >
    You were 
    <strong>
      added to the channel
    </strong>
     by 
    <span
      data-mention="User1."
    >
      @User1.
    </span>
  </p>
  <br />
  <p
    class="markdown__paragraph-inline"
  >
    <span
      data-mention="AddedUser2"
    >
      @AddedUser2
    </span>
     
    <strong>
      added to the channel
    </strong>
     by you.
  </p>
  <br />
</div>
`;

exports[`components/post_view/CombinedSystemMessage should match snapshot when join leave messages are turned off 1`] = `
<div>
  <p
    class="markdown__paragraph-inline"
  >
    You were 
    <strong>
      added to the channel
    </strong>
     by 
    <span
      data-mention="User1."
    >
      @User1.
    </span>
  </p>
  <br />
  <p
    class="markdown__paragraph-inline"
  >
    <span
      data-mention="AddedUser2"
    >
      @AddedUser2
    </span>
     
    <strong>
      added to the channel
    </strong>
     by you.
  </p>
  <br />
</div>
`;

exports[`components/post_view/CombinedSystemMessage should match snapshot, "removed from channel" message when join leave messages are turned off 1`] = `
<div>
  <p
    class="markdown__paragraph-inline"
  >
    <span
      data-mention="removed_username_1"
    >
      @removed_username_1
    </span>
     was 
    <strong>
      removed from the channel
    </strong>
    .
  </p>
  <br />
</div>
`;

exports[`components/post_view/CombinedSystemMessage should render messages in chronological order 1`] = `
<div>
  <p
    class="markdown__paragraph-inline"
  >
    <span
      data-mention="removed_username_1"
    >
      @removed_username_1
    </span>
     was 
    <strong>
      removed from the channel
    </strong>
    .
  </p>
  <br />
  <p
    class="markdown__paragraph-inline"
  >
    <span
      data-mention="removed_username_2"
    >
      @removed_username_2
    </span>
     
    <strong>
      added to the channel
    </strong>
     by Someone.
  </p>
  <br />
  <p
    class="markdown__paragraph-inline"
  >
    <span
      data-mention="removed_username_2"
    >
      @removed_username_2
    </span>
     was 
    <strong>
      removed from the channel
    </strong>
    .
  </p>
  <br />
  <p
    class="markdown__paragraph-inline"
  >
    <span
      data-mention="User2"
    >
      @User2
    </span>
     
    <strong>
      added to the channel
    </strong>
     by 
    <span
      data-mention="User1."
    >
      @User1.
    </span>
  </p>
  <br />
  <p
    class="markdown__paragraph-inline"
  >
    Someone 
    <strong>
      joined the channel
    </strong>
    .
  </p>
  <br />
</div>
`;
